# bgen-limix

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  STABLE_ABI_ANALYSIS.md  bgen-config.cmake.in  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
doc/: index.rst  install.rst
include/bgen/: bstring.h
python/: CMakeLists.txt  bindings.cpp
python/cbgen/: __init__.py  _compat.py  _s3_utils.py  example.py  typing.py
python/tests/: test_bgen.py  test_s3_upath.py
src/: file.c  io.c  stream.cpp  stream.h  unzlib.c
test/: CMakeLists.txt  run_s3_test.sh
test/src/: credentials_file.c  s3_open.c
